@@ -3,10 +3,10 @@
   :url "http://example.com/FIXME" ; Change me - optional
   :license {:name "MIT License"
             :url "https://opensource.org/licenses/MIT"}
-  :dependencies [[org.clojure/clojure "1.12.4"]
+  :dependencies [[org.clojure/clojure "1.12.5"]
                  [org.clojure/data.csv "1.1.1"]
                  [org.clojure/data.json "2.5.2"]
-                 [org.slf4j/slf4j-simple "2.0.17"]
+                 [org.slf4j/slf4j-simple "2.0.18"]
                  [compojure "1.7.2"]
                  [hiccup "2.0.0"]
                  [buddy/buddy-hashers "2.0.167"]
@@ -22,8 +22,8 @@
                  [org.clojure/java.jdbc "0.7.12"]
                  ;; Active JDBC drivers (MySQL, PostgreSQL, SQLite)
                  [mysql/mysql-connector-java "8.0.33"]
-                 [org.postgresql/postgresql "42.7.10"]
-                 [org.xerial/sqlite-jdbc "3.51.2.0"]
+                 [org.postgresql/postgresql "42.7.11"]
+                 [org.xerial/sqlite-jdbc "3.53.2.0"]
                  ;; Optional JDBC drivers (uncomment if needed)
                  ;; [com.microsoft.sqlserver/mssql-jdbc "12.8.1.jre11"]   ; SQL Server
                  ;; [com.h2database/h2 "2.2.224"]                        ; H2
@@ -35,14 +35,14 @@
                  [ring/ring-devel "1.15.4"]
                  [ring/ring-codec "1.3.0"]]
   :main bitacora.core
-  :plugins [[lein-ancient "0.7.0"]
+  :plugins [[lein-ancient "1.0.0"]
             [lein-pprint "1.3.2"]]
   :uberjar-name "bitacora.jar"
   :target-path "target/%s"
   :ring {:handler bitacora.core
          :auto-reload? true
          :auto-refresh? false}
-  :resource-paths ["shared" "resources"]
+  :resource-paths ["resources"]
   :aliases {"migrate"  ["run" "-m" "bitacora.migrations/migrate" "--"]
             "rollback" ["run" "-m" "bitacora.migrations/rollback" "--"]
             ;; Forward any extra args to the seeder fn, e.g.:
@@ -51,21 +51,37 @@
             ;;   lein database :pg      ; postgres (:pg)
             ;;   lein database localdb  ; sqlite (:localdb)
             "database" ["run" "-m" "bitacora.models.cdb/database" "--"]
+            ;; Seed all tables except users
+            ;;   lein seed-non-users
+            ;;   lein seed-non-users pg
+            ;;   lein seed-non-users localdb
+            "seed-non-users" ["run" "-m" "bitacora.models.cdb/seed-non-users" "--"]
             "scaffold" ["run" "-m" "bitacora.engine.scaffold"]
             ;; Convert SQLite migrations to MySQL/PostgreSQL
             ;;   lein convert-migrations mysql        ; default (mysql)
             ;;   lein convert-migrations postgresql   ; postgres
             "convert-migrations" ["run" "-m" "bitacora.db.converter" "--"]
-            ;; Copy data from SQLite to MySQL/PostgreSQL
-            ;;   lein copy-data mysql    ; copy from SQLite to MySQL
-            ;;   lein copy-data postgresql
+            ;; Copy data between databases
+            ;;   lein copy-data localdb mysql          ; SQLite → MySQL
+            ;;   lein copy-data mysql localdb          ; MySQL → SQLite
+            ;;   lein copy-data localdb postgresql     ; SQLite → PostgreSQL
+            ;;   lein copy-data mysql postgresql       ; MySQL → PostgreSQL
+            ;;   lein copy-data localdb mysql --clear  ; clear target tables first
+            ;;   lein copy-data mysql                  ; MySQL → SQLite (default target)
             "copy-data" ["run" "-m" "bitacora.db.migrator" "--"]
-            ;; Generate/remove handler skeleton (controller, model, view)
-            ;;   lein gen-handler reports          ; create
-            ;;   lein gen-handler reports remove   ; remove
-            "gen-handler" ["run" "-m" "bitacora.gen.handler" "--"]}
+             ;; Generate/remove handler skeleton (controller, model, view)
+             ;;   lein gen-handler reports          ; create
+             ;;   lein gen-handler reports remove   ; remove
+            "gen-handler" ["run" "-m" "bitacora.gen.handler" "--"]
+             ;; i18n lint: validate translation keys across source and locale files
+             ;;   lein i18n-lint
+             ;;   lein i18n-lint src        ; scan a specific directory
+            "i18n-lint" ["run" "-m" "bitacora.i18n.lint"]
+            "clean-demo" ["run" "-m" "bitacora.tools.clean-demo" "--"]}
   :profiles {:uberjar {:aot :all
                        :main bitacora.core
-                       :jvm-opts ["-Dclojure.compiler.direct-linking=true"]}
+                       :jvm-opts ["-Dclojure.compiler.direct-linking=true"
+                                  "--enable-native-access=ALL-UNNAMED"]}
              :dev {:source-paths ["src" "dev"]
-                   :main bitacora.dev}})
+                   :main bitacora.dev
+                   :jvm-opts ["--enable-native-access=ALL-UNNAMED"]}})
